--- a/tela1.html
+++ b/tela1.html
@@ -4,7 +4,7 @@
     <meta charset="pt-br">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
